Corrects width on mobile

--- a/blocks/horizontal-list/horizontal-list.css
+++ b/blocks/horizontal-list/horizontal-list.css
@@ -6,6 +6,7 @@
 .horizontal-list-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   width: 100%;
   color: rgb(var(--blue-dark));
@@ -25,7 +26,6 @@
   display: none;
   position: relative;
   overflow: hidden;
-  margin: 0 auto;
 }
 
 .horizontal-list-container .horizontal-list-wrapper .list-control {
@@ -73,7 +73,6 @@
 .horizontal-list-container .horizontal-list.block .content-wrapper {
   display: flex;
   position: relative;
-  margin: 0 auto;
   scroll-behavior: smooth;
   overflow: auto;
 }
@@ -86,7 +85,6 @@
   display: flex;
   padding: 0.5rem;
   margin: 0;
-  width: 100%;
   gap: 3rem;
 }
 
@@ -198,5 +196,12 @@
 
   .horizontal-list-container .horizontal-list-wrapper {
     display: block;
+  }
+}
+
+@media screen and (width >= 900px) {
+  .section > div {
+    max-width: 100%;
+    margin: 0;
   }
 }
